# gitstats3

./: .dockerignore  .gitignore  .project  Dockerfile  IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  dependency-reduced-pom.xml  docker-compose.yml  gitstats  gitstats.css  gitstats.py  oop_metrics.py  pom.xml  pyproject.toml  requirements.txt  sortable.js  sortable.py  test_gitstats_oopmetrics.py
scripts/: build_executable.sh
src/: __init__.py  gitstats_api.py  gitstats_ast.py  gitstats_basecollector.py  gitstats_cli.py  gitstats_config.py  gitstats_core.py  gitstats_datacollector.py  gitstats_export.py  gitstats_gitdatacollector.py  gitstats_helpers.py  gitstats_hotspot.py  gitstats_htmlreport.py  gitstats_oopmetrics.py  gitstats_repository.py  gitstats_tabledata.py  gitstats_tokenizer.py  gitstats_visualization.py
src/assembly/: distribution.xml
src/assets/: gitstats.css
src/main/java/com/gitstats/: GitStatsApplication.java  Launcher.java
src/main/java/com/gitstats/analyzer/: BranchAnalyzer.java  CommitAnalyzer.java  FileAnalyzer.java  RepositoryAnalyzer.java
src/main/java/com/gitstats/core/: Configuration.java  GitCommandExecutor.java
src/main/java/com/gitstats/model/: AuthorStatistics.java  BranchInfo.java  CodeMetrics.java  FileStatistics.java  ProjectHealthMetrics.java  RepositoryData.java
src/main/java/com/gitstats/ui/controller/: MainController.java
src/main/resources/css/: dark-theme.css  main.css
src/scripts/: get_repo_stats.py
tests/: __init__.py  test_gitstats_oopmetrics.py
